<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@+id/add_to_cart_card"
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:layout_margin="5dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="3dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/remove"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_remove_circle_outline_24"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/currentAmountCard"
            style="@style/TextStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/add"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_add_circle_outline_24"
            app:tint="@color/black" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>
